--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     compile "io.springfox:springfox-swagger2:2.4.0"
     compile "io.springfox:springfox-swagger-ui:2.4.0"
 
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'com.h2database:h2:1.4.195'
+    compile 'mysql:mysql-connector-java:6.0.6'
+
     runtime 'com.h2database:h2'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
