--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port = 8001
+
+spring.datasource.url=jdbc:mysql://localhost:3306/file_upload
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
