--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,16 @@ buildscript {
 	}
 }
 
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
+}
+
+flyway {
+    url = 'jdbc:mysql://localhost:3306/file_upload'
+    user = 'root'
+    password = ''
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
@@ -30,6 +40,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.h2database:h2:1.4.195'
     compile 'mysql:mysql-connector-java:6.0.6'
+    compile 'org.flywaydb:flyway-core:4.1.2'
 
     runtime 'com.h2database:h2'
 
