--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/file_upload
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.logging.level.org.hibernate.SQL=debug
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
